--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,6 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=false
 org.gradle.debug=false
-
 neogradle.subsystems.parchment.minecraftVersion=1.20.6
 neogradle.subsystems.parchment.mappingsVersion=2024.05.01
 minecraft_version=1.21
@@ -14,7 +12,7 @@ loader_version_range=[4,)
 mod_id=mystia_izakaya
 mod_name=mystia's izakaya
 mod_license=MIT
-mod_version=alpha-1.0
+mod_version=1.0.0
 mod_group_id=com.crystal.mystia_izakaya
 mod_authors=Crystal1921
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=I hope this mod can bring you an experience close to the "Touhou ~ Mystia's Izakaya".
