--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,36 @@
+#########################################################
+# Gradle                                                #
+#########################################################
 org.gradle.jvmargs=-Xmx1G
-org.gradle.daemon=false
-org.gradle.debug=false
-neogradle.subsystems.parchment.minecraftVersion=1.20.6
-neogradle.subsystems.parchment.mappingsVersion=2024.05.01
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+
+
+#########################################################
+# Minecraft Version                                     #
+#########################################################
+parchment_minecraft_version=1.20.6
+parchment_mappings_version=2024.06.02
 minecraft_version=1.21
 minecraft_version_range=[1.21,1.21.1)
-neo_version=21.0.0-beta
+neo_version=21.0.37-beta
 neo_version_range=[21.0.0-beta,)
 loader_version_range=[4,)
 
+#########################################################
+# Provided APIs                                         #
+#########################################################
+jei_version=19.0.0.11
+rei_version=15.0.728
+emi_version=1.1.6
+curios_version=8.0.0-beta.6
+top_version=1.20.5_neo-11.1.1-2
+
+#########################################################
+# Mod Info                                              #
+#########################################################
 mod_id=mystia_izakaya
 mod_name=mystia's izakaya
 mod_license=MIT
