--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,3 @@
 public net.minecraft.world.entity.projectile.FishingHook shouldStopFishing(Lnet/minecraft/world/entity/player/Player;)Z # shouldStopFishing
 public net.minecraft.world.entity.projectile.FishingHook nibble
-public net.minecraft.client.gui.GuiGraphics pose
-public net.minecraft.client.gui.GuiGraphics bufferSource
+public net.minecraft.client.gui.GuiGraphics flushIfUnmanaged()V # flushIfUnmanaged
