--- a/gradle.properties
+++ b/gradle.properties
@@ -15,14 +15,14 @@ parchment_minecraft_version=1.21
 parchment_mappings_version=2024.07.07
 minecraft_version=1.21
 minecraft_version_range=[1.21,1.21.1)
-neo_version=21.0.114-beta
+neo_version=21.0.167
 neo_version_range=[21.0.0-beta,)
 loader_version_range=[4,)
 
 #########################################################
 # Provided APIs                                         #
 #########################################################
-jei_version=19.0.0.11
+jei_version=19.7.0.92
 rei_version=15.0.728
 emi_version=1.1.6
 curios_version=8.0.0-beta.6
