--- a/gradle.properties
+++ b/gradle.properties
@@ -37,4 +37,4 @@ mod_license=MIT
 mod_version=1.0.0
 mod_group_id=com.crystal.mystia_izakaya
 mod_authors=Crystal1921
-mod_description=I hope this mod can bring you an experience close to the "Touhou ~ Mystia's Izakaya".
+mod_description=Touhou ~ Mystia's Izakaya is a re-creation game about Touhou.\n\n This mod intend to bring you an experience close to the "Touhou ~ Mystia's Izakaya" in Minecraft. Have fun cooking.
