--- a/build.gradle
+++ b/build.gradle
@@ -153,7 +153,7 @@ configurations {
 
 dependencies {
     implementation "mezz.jei:jei-${project.minecraft_version}-neoforge:${project.jei_version}"
-    implementation "libs:touhoulittlemaid:1.21-release-1.1.12"
+    implementation "libs:touhoulittlemaid:1.21-release-1.1.12-hotfix"
     implementation "curse.maven:jade-324717:5444008"
 
 }
