--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,11 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
 
+      - name: Use PAT for some task
+        run: echo "Using the secret!"
+        env:
+          TOKEN: ${{ secrets.MYSTIAS_ACTION_SECRET }}
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
