--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Use PAT for some task
         run: echo "Using the secret!"
         env:
-          TOKEN: ${{ secrets.MYSTIAS_ACTION_SECRET }}
+          TOKEN: ${{ secrets.ACTION_SECRET }}
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
