--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -33,9 +33,6 @@ description='''${mod_description}'''
 
 # The coremods config file path is not configurable and is always loaded from META-INF/coremods.json
 
-[[dependencies.${mod_id}]] #optional
-# the modid of the dependency
-
 modId="neoforge" #mandatory
 type="required" #mandatory
 versionRange="${neo_version_range}" #mandatory
@@ -45,6 +42,13 @@ side="BOTH"
 
 [[dependencies.${mod_id}]]
 modId="minecraft"
+type="required"
+versionRange="${minecraft_version_range}"
+ordering="NONE"
+side="BOTH"
+
+[[dependencies.${mod_id}]]
+modId="touhou_little_maid"
 type="required"
 versionRange="${minecraft_version_range}"
 ordering="NONE"
