--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -33,6 +33,7 @@ description='''${mod_description}'''
 
 # The coremods config file path is not configurable and is always loaded from META-INF/coremods.json
 
+[[dependencies.${ mod_id }]]
 modId="neoforge" #mandatory
 type="required" #mandatory
 versionRange="${neo_version_range}" #mandatory
@@ -47,9 +48,9 @@ versionRange="${minecraft_version_range}"
 ordering="NONE"
 side="BOTH"
 
-[[dependencies.${mod_id}]]
-modId="touhou_little_maid"
-type="required"
-versionRange="${minecraft_version_range}"
-ordering="NONE"
-side="BOTH"
+[[dependencies.${ mod_id }]]
+modId = "touhou_little_maid"
+mandatory = true
+versionRange = "${touhou_little_maid_version_range}"
+ordering = "NONE"
+side = "BOTH"
