--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,15 @@
 name: Build
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+    tags-ignore:
+      - 'snapshot-*'
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -34,11 +43,6 @@ jobs:
         run: |
           chmod +x ./gradlew
           ./gradlew build
-
-      - name: Create timestamp
-        id: create_timestamp
-        run: echo "::set-output name=timestamp::$(date '+%Y%m%d-%H%M%S')"
-        shell: bash
 
       - name: Send file to Release
         uses: softprops/action-gh-release@v2
