--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ minecraft_version=1.21
 minecraft_version_range=[1.21,1.21.1)
 neo_version=21.0.167
 neo_version_range=[21.0.0-beta,)
+touhou_little_maid_version_range=[1.1.12,)
 loader_version_range=[4,)
 
 #########################################################
