--- a/build.gradle
+++ b/build.gradle
@@ -158,7 +158,7 @@ configurations {
 dependencies {
     implementation "mezz.jei:jei-${project.minecraft_version}-neoforge:${project.jei_version}"
     implementation "maven.modrinth:touhou-little-maid:ZSKbmDse"
-    implementation "maven.modrinth:mystiasizakaya:0.1.0-rc2-fix"
+    implementation "teacon:mystias_izakaya:neoforge-1.21-0.1.0-rc5"
     implementation "curse.maven:jade-324717:5444008"
 
 }
